core: - vkCmdPipelineBarrier2 on Windows
pbr:
- font storage implementation for Windows

--- a/app/src/main/cpp/include/platform/windows/vulkan_device.in
+++ b/app/src/main/cpp/include/platform/windows/vulkan_device.in
@@ -1,6 +1,7 @@
 X ( vkCmdBeginRendering )
 X ( vkCmdBindDescriptorBuffersEXT )
 X ( vkCmdEndRendering )
+X ( vkCmdPipelineBarrier2 )
 X ( vkCmdSetDescriptorBufferOffsetsEXT )
 X ( vkGetBufferDeviceAddress )
 X ( vkGetDescriptorEXT )
